--- a/Css/style.css
+++ b/Css/style.css
@@ -13,6 +13,7 @@ html, body {
 
 header nav {
     background-color: #000;
+    padding: 10px 0;
 }
 
 header nav .container {
@@ -27,9 +28,55 @@ header nav .logo {
     text-decoration: none;
 }
 
+header nav .menu ul li a {
+   color:#fff;
+   text-decoration: none;
+   font-weight: bold;
+   font-size: 1.2rem;
+}
+
+header .hero {
+    background-image: url('../Imagens/bg-hero.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header.hero #formSearch {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header .hero #formSearch input {
+    width: 70vw;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, .3);
+    text-align: center;
+}
+
+main {
+    margin: 20px 0px;
+}
+
+main .container h3{
+     font-size: 2rem;
+     margin-bottom: 20px;
+}
+
+main .container.pratos {
+    display: flexbox;
+    flex-direction: column;
+}
 /* container */
 .container {
     width: 90vw;
     margin: 0px auto;
 }
+
 
