--- a/Css/style.css
+++ b/Css/style.css
@@ -46,7 +46,7 @@ header .hero {
     align-items: center;
 }
 
-header.hero #formSearch {
+header .hero #formSearch {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,7 +61,7 @@ header .hero #formSearch input {
 }
 
 main {
-    margin: 20px 0px;
+    margin: 20px 0px; 
 }
 
 main .container h3{
@@ -69,9 +69,95 @@ main .container h3{
      margin-bottom: 20px;
 }
 
-main .container.pratos {
-    display: flexbox;
+main .container .pratos {
+    display: flex;
     flex-direction: column;
+}
+
+.prato {
+    background-color:#fff;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, .3);
+    transition: 0.3s ease;
+}
+
+.prato:hover {
+    background-color: #f5f5f5;
+}
+.prato img {
+    border-radius: 5px 5px 0px 0px;
+    margin-bottom: 10px;
+    
+}
+
+.prato h4 {
+    padding: 0px 20px;
+    text-align: center;
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+}
+
+.prato p {
+    padding: 0px 20px;
+    font-size: 1rem;
+}
+
+.prato button {
+    width: 50%;
+    margin: 20px auto;
+    padding: 10px;
+    font-weight: bold;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, .3);;
+    text-transform: uppercase;
+    background-color: #000;
+    color: #fff;
+    cursor: pointer;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, .3);
+    transition: 0.3s ease;
+}
+
+.prato button:hover {
+    background-color: #dedede;
+    color: #000;
+}
+
+footer {
+    padding: 10px 0px;
+}
+
+footer .container p {
+    text-align: center;
+    font-weight: bold;
+}
+
+.hero-sobre {
+    height: 300px;
+    background-image: linear-gradient(45deg, black, gray); 
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-sobre .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (min-width: 600px) {
+    main .container .pratos {
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    } 
+    main .container .pratos .prato {
+        width: 260px;
+    }
 }
 /* container */
 .container {
